# micah-lindsey

./: .gitignore  .stylelintignore  2026-02-13-tcad-scraper-bug-detective-lint-cleanup.md  2026-02-14-llm-explainability-design-aggregate-telemetry.md  2026-02-15-design-spec-quality-rescore.md  2026-02-16-feature-engineering-backlog-session.md  2026-02-16-pt-br-translation-provenance-aggregate-telemetry.md  2026-02-16-quality-score-improvements-session-telemetry.md  404.md  CNAME  Gemfile  README.md  _config.yml  index.html  package-lock.json  package.json
.claude/: settings.local.json
_data/: authors.yml  navigation.yml  social-platforms.yml
_includes/: _facebook_pixel.html  _google_tag_manager.html  _head.html  _navigation.html  _scripts.html  about-page-schema.html  analysis-article-schema.html  author-profile.html  breadcrumb-schema.html  breadcrumbs-wrapper.html  breadcrumbs.html  comment.html  comments.html  (+27 more)
utils/: CLEANUP-SCRIPT-DOCUMENTATION.md  DUPLICATION-FINDER.md  LICENSE.md  README.md  mcp_server.py  pyproject.toml
utils/analysis/: average_commits.sh  commit_distribution.sh  commit_history.sh  commits_by_day_of_week.sh  commits_by_hour.sh  commits_by_month.sh  get_repo_name.sh  repo_utils.py
utils/plotting/: generate_wordcloud.py  plot_avg_commits.py  plot_commits_by_hour.py  plot_pie_day.py  plot_pie_day_month.py  plot_pie_month.py  plot_repo.py  plot_utils.py
utils/scripts/: cleanup-repository.sh  convert_kebab_to_snake.sh  convert_snake_to_kebab.sh  find-duplicates.sh  measure-baseline-metrics.sh  migrate-scss-functions.sh  setup-doppler.sh
(+125 files in other folders)
